Rewritten the Bidirectional IDDFS.